Complement report for AS3

--- a/AS2/notebook/fire_training.ipynb
+++ b/AS2/notebook/fire_training.ipynb
@@ -97,8 +97,10 @@
    },
    "outputs": [],
    "source": [
+    "file_location = os.path.abspath(__file__)\n",
+    "root_directory = os.path.dirname(file_location)\n",
     "image_size = 224\n",
-    "data_path = \"fire_dataset/\""
+    "data_path = os.path.join(root_directory, '..', \"fire_dataset/\")"
    ]
   },
   {
@@ -462,7 +464,10 @@
    },
    "outputs": [],
    "source": [
-    "checkpoint = ModelCheckpoint(\"model.h5\",monitor='val_acc',verbose = 1,save_best_only=True,mode='max')"
+    "model_dir = os.path.join(root_directory, '..', 'saved_model/')\n",
+    "model_h5_path = os.path.join(model_dir, 'model.h5')\n",
+    "model_h5_weight = os.path.join(model_dir, \"model_emotion.h5\")\n",
+    "checkpoint = ModelCheckpoint(model_h5_path,monitor='val_acc',verbose = 1,save_best_only=True,mode='max')"
    ]
   },
   {
@@ -504,7 +509,8 @@
    },
    "outputs": [],
    "source": [
-    "# model.load_weights(\"model_emotion.h5\")"
+    "if os.path.exists(model_h5_weight):\n",
+    "    model.load_weights(model_h5_weight)"
    ]
   },
   {
